drive page layout shift fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -136,15 +136,6 @@ body {
   -ms-user-select: none;
 }
 
-.morphic-effect {
-  /* background: rgba(255, 255, 255, 0.9); */
-  /* background-color: #071a26; */
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.1);
-  /* border: 1px solid rgba(255, 255, 255, 0.18); */
-}
-
 .desktop-menu .nav-item button:hover {
   transition-duration: 500ms;
 }
